<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Homework1</string>
    <string name="action_settings">Settings</string>
    <string name="title">GPA Calculator</string>
    <string name="assignment">Assignment Name:</string>
    <string name="marks">Marks:</string>
    <string name="total">Total:</string>
    <string name="percentage">Percentage (%):</string>
    <string name="subject">Subject:</string>
    <string name="button_add">Add Assignment</string>
    <string name="button_calculate">Calculate</string>
    <string name="numberofassignments">Number of Assessments:</string>
    <string name="nassignments">0</string>
    <string name="button_clear">Clear</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_results">Results</string>

</resources>
